# index.js
@@ -1,17 +1,20 @@
 const express = require('express')
 const mongoose = require('mongoose')
-const app = express()
 const swaggerUi = require('swagger-ui-express');
+const app = express()
 const yaml = require('js-yaml');
 const fs = require('fs');
+const {processTransactions} = require('./middlewares')
 
 // Get document, or throw exception on error
 try {
     const swaggerDocument = yaml.load(fs.readFileSync('swagger.yaml', 'utf8'));
+    console.log(swaggerDocument);
     app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 } catch (e) {
-    console.log(e.message);
+    console.log(e);
 }
+
 
 // Parse request body
 app.use(express.json());
@@ -21,7 +24,13 @@ require("dotenv").config()
 
 // Register routes
 app.use('/users', require('./routes/users'))
+
+// Sessions
 app.use('/sessions', require('./routes/sessions'))
+
+// Transactions
+app.use('/transactions', require('./routes/transactions'))
+
 
 // Open connection to MongoDB
 mongoose.connect(process.env.MONGODB_URL, function (err) {
