# routes/users.js
@@ -1,11 +1,13 @@
-
 // Pull in dependencies
 const router = require('express').Router();
 const User = require('../models/User');
+const Account = require('../models/Account');
 const bcrypt = require('bcrypt');
+const {verifyToken} = require("../middlewares");
+
 
 // Handle POST /users
-module.exports = router.post('/',  async (req, res) => {
+module.exports = router.post('/', async (req, res) => {
     try {
 
         // Save user to DB
@@ -22,6 +24,17 @@ module.exports = router.post('/',  async (req, res) => {
             user.password = hash;
             user.save();
         });
+
+        // Add account
+        await Account.create({
+            userId: user._id,
+            account_number: process.env.BANK_PREFIX + Math.random().toString(36).substr(2, 9),
+            currency: 'euro',
+            balance: '10000',
+            name: 'Main'
+        });
+
+
 
         // 201 Created
         res.status(201).end()
@@ -45,4 +58,25 @@ module.exports = router.post('/',  async (req, res) => {
         // 500 Unknown error
         return res.status(500).send({error: e.message})
     }
+
+})
+
+module.exports = router.get('/current', verifyToken, async (req, res) => {
+    try {
+        const user = await User.findOne({_id: req.userId});
+        res.status(200).send({
+                "name": user.name,
+                "username": user.username,
+                "accounts":  await Account.find({userId: req.userId})          }
+        )
+
+    } catch (e) {
+
+        // 403 User access forbidden
+        if (req.params._id !== req.userId) {
+            res.status(403).json({error: "Forbidden"})
+
+        }
+    }
+
 })
